# rust_server

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
openspec/: README.md  ROADMAP.md  config.yaml
openspec/changes/api-response/: design.md  proposal.md  tasks.md
openspec/changes/auth/: design.md  proposal.md  tasks.md
openspec/changes/cache-backend/: proposal.md  tasks.md
openspec/changes/database-backend/: proposal.md  tasks.md
openspec/changes/http-api/: design.md  proposal.md  tasks.md
openspec/changes/image-filters/: design.md  proposal.md  tasks.md
openspec/changes/image-pipeline/: .openspec.yaml  tasks.md
openspec/changes/image-source/: design.md  proposal.md  tasks.md
openspec/changes/image-transform/: design.md  proposal.md  tasks.md
openspec/changes/image-watermark/: design.md  proposal.md  tasks.md
openspec/changes/observability/: design.md  proposal.md  tasks.md
openspec/changes/params/: .openspec.yaml  tasks.md
openspec/changes/proto-api/: proposal.md  tasks.md
openspec/changes/runtime-config/: design.md  proposal.md  tasks.md
openspec/changes/shared-infra/: proposal.md  tasks.md
openspec/specs/api-response/: spec.md
openspec/specs/auth/: spec.md
openspec/specs/cache-backend/: spec.md
openspec/specs/database-backend/: spec.md
openspec/specs/entity/: spec.md
openspec/specs/http-api/: spec.md
openspec/specs/image-filters/: spec.md
openspec/specs/image-pipeline/: spec.md
openspec/specs/image-source/: spec.md
openspec/specs/image-transform/: spec.md
openspec/specs/image-watermark/: spec.md
openspec/specs/observability/: spec.md
openspec/specs/params/: spec.md
openspec/specs/proto-api/: spec.md
openspec/specs/runtime-config/: spec.md
openspec/specs/shared-infra/: spec.md
proto/: api.proto
src/: config.rs  error.rs  http_client.rs  lib.rs  main.rs  params.rs  proto.rs  response.rs  router.rs  source.rs  state.rs
src/auth/: account.rs  casbin.rs  casbin_adapter.rs  casbin_db.rs  jwt.rs  mod.rs  password.rs  user.rs
src/cache/: cache.rs  client.rs  config.rs  memory.rs  mod.rs  redis.rs
src/controller/: auth.rs  health.rs  img.rs  mod.rs
src/db/: client.rs  config.rs  db.rs  mod.rs  mongo.rs  sql.rs
src/entity/: mod.rs  schema.rs  sql_backend.rs  test_util.rs
src/entity/models/: mod.rs  (+2 more)
src/logger/: config.rs  formatter.rs  init.rs  layer.rs  macros.rs  mod.rs
src/middleware/: auth.rs  logging.rs  middleware.rs  mod.rs
src/proc/: filter.rs  mod.rs  transform.rs  watermark.rs
src/util/: mod.rs
tests/: integration.rs
tests/common/: mod.rs
(+16 files in other folders)
