[package]
name = "thumbor"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Rust image processing server (crop, resize, watermark, filters) built on axum"
license = "MIT OR Apache-2.0"
repository = "https://github.com/kouhenrui/rust_server.git"

[lib]
name = "thumbor"
path = "src/lib.rs"

[[bin]]
name = "thumbor"
path = "src/main.rs"

[dependencies]
# Web server
axum = { version = "0.7", features = ["macros", "http2"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "net"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors", "limit"] }

# Image processing
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp", "bmp", "gif"] }
imageproc = { version = "0.25", default-features = false }
ab_glyph = "0.2"

# Serialization / config
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Errors / logging / utilities
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "local-time"] }
time = { version = "0.3", features = ["macros"] }
anyhow = "1"
async-trait = "0.1"
bytes = "1"
base64 = "0.22"
http-body-util = "0.1"
percent-encoding = "2"
once_cell = "1"
nanoid = "0.4"
# Remote image source
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }

# Protobuf wire format (POST /img with Content-Type: application/x-protobuf)
prost = "0.13"
redis = { version = "0.32.2", features = ["tokio-comp"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "mysql", "sqlite", "any"] }
mongodb = { version = "3.2", default-features = false, features = ["compat-3-0-0", "rustls-tls"] }
dotenvy = "0.15.7"

# Auth
bcrypt = "0.16"
jsonwebtoken = "9"
casbin = { version = "2.20", default-features = false, features = ["runtime-tokio", "incremental"] }

[build-dependencies]
# Compiles proto/api.proto → generated Rust code in OUT_DIR, included by src/proto.rs
prost-build = "0.13"
# Vendors a precompiled `protoc.exe` (downloaded once on first build)
# so we never depend on whatever's on PATH. `protobuf-src` was tried
# first but it tries to build protoc from source via CMake on first
# run, which fails on Windows without a working C toolchain.
protoc-bin-vendored = "3"

[dev-dependencies]
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "debuginfo"
